--- a/FallProject/appsettings.json
+++ b/FallProject/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "PlaceHolderSecretKey",
+    "Issuer": "http://localhost:7151",
+    "Audience": "http://localhost:5500"
+  }
 }
