--- a/SERVICES/SERVICES.csproj
+++ b/SERVICES/SERVICES.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="MailKit" Version="3.1.1" />
+
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
 
