--- a/SERVICES/SERVICES.csproj
+++ b/SERVICES/SERVICES.csproj
@@ -7,11 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="MailKit" Version="3.1.1" />
 
     <PackageReference Include="Microsoft.AspNetCore.Authentication" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.2" />
 
     <PackageReference Include="Microsoft.AspNetCore.Cryptography.KeyDerivation" Version="6.0.1" />
+
+    <PackageReference Include="MimeKit" Version="3.1.1" />
 
   </ItemGroup>
 
